# Xenomorph

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.miner  Dockerfile.node  Dockerfile.wallet  README.md  build-l2-docker.sh  build-node.sh  docker-compose.yml  docker-miner-entrypoint.sh  install_docker_nvidia.sh  install_xenom_node_and_keys.sh  l2-all-in-one-entrypoint.sh  l2-all-in-one.Dockerfile  main.sh  nohup.out  pool.db  run_l2_worker.sh  script.sh  xenom-node.service  xenom-wallet.service
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yaml  genome-miner-release.yml  genome-release.yml  main.yml  release-all.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  matchers.rs
cli/src/modules/: account.rs  connect.rs  disconnect.rs  guide.rs  history.rs  monitor.rs  node.rs  pskb.rs  send.rs  test.rs
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
components/consensusmanager/src/: session.rs
consensus/: Cargo.toml
consensus/client/: Cargo.toml
consensus/client/src/: hash.rs  header.rs  lib.rs  output.rs  utxo.rs
consensus/core/src/: block.rs  constants.rs  header.rs  merkle.rs  network.rs  tx.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: genome_file.rs  genome_pow.rs  lib.rs  matrix.rs
consensus/src/: test_helpers.rs
consensus/src/consensus/: mod.rs  services.rs  storage.rs  (+1 more)
core/: Cargo.toml
core/src/: kaspad_env.rs
crypto/hashes/: Cargo.toml
crypto/muhash/: Cargo.toml
crypto/txscript/: Cargo.toml
daemon/src/: lib.rs
database/src/: registry.rs
docs/: hiveos-install.md  testnet11.md
genome-freeze/: Cargo.toml
genome-freeze/src/: main.rs
genome-miner/: Cargo.toml  README.md
genome-miner/src/: api.rs  genome_pow.wgsl  gpu.rs  kheavyhash.wgsl  kheavyhash2.wgsl  kheavyhash3.wgsl  kheavyhash4.wgsl  l2_worker.rs  main.rs  stratum_client.rs  tui.rs
indexes/core/: Cargo.toml
indexes/processor/: Cargo.toml
integrations/: package-lock.json
integrations/bioproof/: README.md
integrations/bioproof/bioproof-api/: Cargo.toml
integrations/bioproof/bioproof-api/src/: main.rs
integrations/bioproof/bioproof-core/: Cargo.toml
integrations/bioproof/bioproof-core/src/: hasher.rs  lib.rs  signing.rs  types.rs
integrations/bioproof/bioproof-daemon/: Cargo.toml
integrations/bioproof/bioproof-daemon/src/: main.rs
integrations/bioproof/bioproof-indexer/: Cargo.toml
integrations/bioproof/bioproof-indexer/src/: main.rs
integrations/bioproof/bioproof-verifier/: Cargo.toml
integrations/bioproof/bioproof-verifier/src/: main.rs
integrations/bioproof/bioproof-worker/: Cargo.toml
integrations/bioproof/bioproof-worker/src/: capabilities.rs  job_loop.rs  main.rs  proof.rs
integrations/bioproof/bioproof-worker/src/executor/: ai.rs  docker.rs  mod.rs  native.rs  nextflow.rs
integrations/discord-bot/: README.md  deploy-commands.js  index.js  package-lock.json  package.json  test-hashrate.js
integrations/genetics-l2/: README.md
integrations/genetics-l2/genetics-l2-coordinator/: API.md  Cargo.toml
integrations/genetics-l2/genetics-l2-coordinator/src/: main.rs
integrations/genetics-l2/genetics-l2-core/: Cargo.toml
integrations/genetics-l2/genetics-l2-core/src/: lib.rs
integrations/genetics-l2/genetics-l2-fetcher/: Cargo.toml
integrations/genetics-l2/genetics-l2-fetcher/src/: boinc.rs  clinvar.rs  dream.rs  gdc.rs  gnomad.rs  horizon.rs  igsr.rs  kaggle.rs  main.rs  nih.rs  sra.rs
integrations/genetics-l2/genetics-l2-settlement/: Cargo.toml
integrations/genetics-l2/genetics-l2-settlement/src/: main.rs
integrations/genetics-l2/genetics-l2-validator/: Cargo.toml
integrations/genetics-l2/genetics-l2-validator/src/: main.rs
integrations/genetics-l2/genetics-l2-worker/: Cargo.toml
integrations/genetics-l2/genetics-l2-worker/src/: main.rs
integrations/hiveos/: build.sh  createmanifest.sh  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  install.sh
integrations/stratum-bridge/: Cargo.toml  README.md  install-miner-solo.sh  install-miner.sh
integrations/stratum-bridge/config/: ai-bridge.toml  climate-bridge.toml  genetics-bridge.toml  pool-registry.json
integrations/stratum-bridge/src/: accounting.rs  api.rs  config.rs  db.rs  dispatcher.rs  job.rs  l2_jobs.rs  main.rs  payments.rs  pool.html  proto.rs  stratum.rs  vardiff.rs
integrations/xenom-anchor-client/: Cargo.toml
integrations/xenom-anchor-client/src/: lib.rs  tx.rs
integrations/xenom-evm/: README.md  resume.md
integrations/xenom-evm/xenom-anchor-committer/: Cargo.toml
integrations/xenom-evm/xenom-anchor-committer/src/: main.rs
integrations/xenom-evm/xenom-evm-core/: Cargo.toml
integrations/xenom-evm/xenom-evm-core/src/: backend.rs  chain.rs  checkpoint.rs  lib.rs  persist.rs  types.rs
integrations/xenom-evm/xenom-evm-node/: Cargo.toml
integrations/xenom-evm/xenom-evm-node/src/: main.rs
integrations/xenom-evm/xenom-evm-rpc/: Cargo.toml
integrations/xenom-evm/xenom-evm-rpc/src/: lib.rs
math/fuzz/: Cargo.toml
math/src/: uint.rs
mining/: Cargo.toml
mining/src/: manager_tests.rs
notify/src/: notifier.rs
picod/: Cargo.toml
picod/src/: args.rs  daemon.rs  main.rs
protocol/flows/: Cargo.toml
protocol/p2p/: Cargo.toml
rothschild/: Cargo.toml
rothschild/src/: main.rs
rpc/core/: Cargo.toml
rpc/service/: Cargo.toml
scripts/: birdclef2026.py  birdclef_gpu_infer.py  check-keys.sh  download-datasets.sh  efficientnet_infer.py  genome_annotate.py  node.sh  perch_infer.py  pool-genetics.sh  requirements-birdclef_gpu.txt  requirements-efficientnet.txt  requirements-yamnet.txt  yamnet_infer.py
testing/integration/: Cargo.toml
utils/alloc/: Cargo.toml
utils/src/: iter.rs
utils/tower/: Cargo.toml
wallet/native/: Cargo.toml
wallet/pskt/: Cargo.toml
wallet/wasm/: Cargo.toml
wasm/: .gitignore  Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
xenom/: Cargo.toml
xenom/src/: args.rs  daemon.rs  main.rs
(+133 files in other folders)
