[package]
name = "genome-miner"
description = "Xenomorph Genome PoW CPU miner"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "genome-miner"
path = "src/main.rs"

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-notify.workspace = true
kaspa-pow.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true

clap.workspace = true
crossterm = "0.27"
dirs.workspace = true
faster-hex.workspace = true
log.workspace = true
rayon.workspace = true
ratatui = "0.26"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
wgpu = { version = "22", features = ["metal", "vulkan-portability"] }

[lints]
workspace = true
