[package]
name = "genome-miner"
description = "Xenomorph Genome PoW CPU miner"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "genome-miner"
path = "src/main.rs"

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-notify.workspace = true
kaspa-pow.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true

anyhow = "1"
clap.workspace = true
crossterm = "0.27"
dirs.workspace = true
faster-hex.workspace = true
log.workspace = true
serde_json.workspace = true
rayon.workspace = true
ratatui = "0.26"
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "process", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
bioproof-core     = { path = "../integrations/bioproof/bioproof-core" }
genetics-l2-core  = { path = "../integrations/genetics-l2/genetics-l2-core" }
blake3.workspace  = true
hex               = "0.4"
wgpu = { version = "22", features = ["metal", "vulkan-portability"] }

# Encryption for local output files
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
