[package]
name = "xenom-stratum-bridge"
description = "Stratum bridge for Xenom Genome PoW mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "xenom-stratum-bridge"
path = "src/main.rs"

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-math.workspace = true
kaspa-pow.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
secp256k1.workspace = true

anyhow = "1"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
clap.workspace = true
faster-hex.workspace = true
hex.workspace = true
log.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors"] }

[lints]
workspace = true
