[package]
name = "genetics-l2-core"
description = "Genetics L2 — shared types, job model, result model, settlement payload"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bioproof-core        = { path = "../../../integrations/bioproof/bioproof-core" }

anyhow    = "1"
blake3.workspace      = true
hex.workspace         = true
serde.workspace       = true
serde_json.workspace  = true

[lints]
workspace = true
