[package]
name = "genetics-l2-core"
description = "Genetics L2 — shared types, job model, result model, settlement payload"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bioproof-core        = { path = "../../../integrations/bioproof/bioproof-core" }

anyhow    = "1"
blake3.workspace      = true
hex.workspace         = true
serde.workspace       = true
serde_json.workspace  = true

# Encryption for L2 result protection
secp256k1 = { version = "0.29", features = ["rand"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"

[lints]
workspace = true
