[package]
name = "genetics-l2-fetcher"
description = "Genetics L2 — external job fetcher (Kaggle, NIH, BOINC)"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genetics-l2-fetcher"
path = "src/main.rs"

[dependencies]
genetics-l2-core     = { path = "../genetics-l2-core" }
kaspa-core.workspace = true

anyhow        = "1"
dirs          = "5"
async-trait   = "0.1"
blake3.workspace      = true
clap.workspace        = true
hex.workspace         = true
log.workspace         = true
reqwest   = { version = "0.12", features = ["json"] }
serde.workspace       = true
serde_json.workspace  = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
