[package]
name = "genetics-l2-settlement"
description = "Genetics L2 — settlement service (results_root Merkle + Xenom anchor)"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genetics-l2-settlement"
path = "src/main.rs"

[dependencies]
genetics-l2-core        = { path = "../genetics-l2-core" }
xenom-anchor-client     = { path = "../../../integrations/xenom-anchor-client" }
kaspa-addresses.workspace    = true
kaspa-grpc-client.workspace  = true
kaspa-rpc-core.workspace     = true
kaspa-core.workspace         = true
secp256k1.workspace          = true

anyhow    = "1"
clap.workspace        = true
hex.workspace         = true
log.workspace         = true
reqwest   = { version = "0.12", features = ["json"] }
serde.workspace       = true
serde_json.workspace  = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
