[package]
name = "genetics-l2-worker"
description = "Genetics L2 — scientific worker daemon (polls coordinator, executes algorithms, submits results)"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genetics-l2-worker"
path = "src/main.rs"

[dependencies]
genetics-l2-core     = { path = "../genetics-l2-core" }
bioproof-core        = { path = "../../../integrations/bioproof/bioproof-core" }
kaspa-core.workspace = true

anyhow    = "1"
blake3.workspace      = true
clap.workspace        = true
hex.workspace         = true
log.workspace         = true
reqwest   = { version = "0.12", features = ["json"] }
serde.workspace       = true
serde_json.workspace  = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time", "process", "fs"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
