[package]
name        = "xenom-anchor-committer"
description = "Xenom EVM L2 — anchor committer daemon: reads pending checkpoints and commits short proofs to L1"
rust-version.workspace = true
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true

[[bin]]
name = "xenom-anchor-committer"
path = "src/main.rs"

[dependencies]
xenom-evm-core        = { version = "0.15.2", path = "../xenom-evm-core" }
xenom-anchor-client   = { version = "0.15.2", path = "../../xenom-anchor-client" }
tokio                 = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
clap                  = { workspace = true }
hex                   = { workspace = true }
log                   = { workspace = true }
kaspa-core            = { workspace = true }
kaspa-grpc-client     = { workspace = true }
kaspa-rpc-core        = { workspace = true }
kaspa-addresses       = { workspace = true }
rocksdb               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
bincode               = { workspace = true }
reqwest               = { version = "0.12", features = ["json"] }
secp256k1             = { workspace = true }
thiserror             = { workspace = true }
anyhow                = "1"

[lints]
workspace = true
