[package]
name        = "xenom-evm-rpc"
description = "Xenom EVM L2 — Ethereum-compatible JSON-RPC server"
rust-version.workspace = true
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true

[lib]
name = "xenom_evm_rpc"
path = "src/lib.rs"

[dependencies]
xenom-evm-core = { version = "0.15.2", path = "../xenom-evm-core" }
jsonrpsee      = { workspace = true }
tokio          = { workspace = true, features = ["rt-multi-thread", "sync"] }
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }
log            = { workspace = true }
thiserror      = { workspace = true }
anyhow         = "1"
tower-http     = { workspace = true }
tower          = { workspace = true }

[lints]
workspace = true
